[project]
name = "jenkins-python-test"
version = "0.1.0"

[tool.setuptools]
packages = ["app"]

[tool.poetry]
name = "jenkins-python-test"
version = "0.1.0"
description = ""
authors = ["..."]
packages = [{include = "jenkins_python_test"}]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
